--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,22 @@
 doctype html
 html
   head
-    title
-      | Asagao
+    title 
+      = page_title
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = yield
+    #container
+      header
+        = render "shared/header"
+      main
+        -if flash.notice
+          p.notice
+            = flash.notice
+        = yield
+      aside#sidebar
+        = render "shared/sidebar"
+      footer
+        = render "shared/footer"
