--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,4 +1,5 @@
-h1
-  | Top#index
-p
-  | Find me in app/views/top/index.html.erb
+- 5.times do |x|
+  h2 見出し
+  p
+    | ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。ここに本文が入ります。
+    = link_to "もっと読む", "#"
